# sapphire

./: :q  CLOC.md  Cargo.toml  Makefile  README.md  clippy.toml  cloc  config.mk  generate-readme
.github/workflows/: check-fmt.yml  clippy.yml  rust.yml  test.yml
crates/cipher/: Cargo.toml  README.md
crates/cipher/benches/: encrypt_decrypt.rs
crates/cipher/src/: auth.rs  decrypt.rs  encrypt.rs  error.rs  kdf.rs  lib.rs  mac.rs
crates/cipher/tests/: encrypt_decrypt.rs
crates/desktop-iced/: Cargo.toml
crates/desktop-iced/src/: app.rs  flash.rs  main.rs  message.rs  page.rs  settings.rs
crates/desktop-iced/src/settings/: ensure.rs  json.rs  loader.rs  loader_impl.rs  mod.rs  model.rs  saver.rs  saver_impl.rs
crates/desktop-iced/src/settings/json/: loader.rs  mod.rs  saver.rs
crates/desktop-iced/src/settings_json/: loader.rs  mod.rs  saver.rs
crates/desktop-utils/: Cargo.toml
crates/desktop-utils/src/: config.rs  lib.rs
crates/dr/: Cargo.toml  rustfmt.toml
crates/dr/benches/: usage.rs
crates/dr/src/: clue.rs  code.rs  draft.rs  encrypted_hdr_buf.rs  error.rs  hdr.rs  header.rs  lib.rs  macros.rs  msg_chain.rs  recv.rs  root.rs  send.rs  skipped_msg_keys.rs  state.rs  utils.rs
crates/dr/src/cipher/: decrypt.rs  encrypt.rs  error.rs  kdf_out.rs  mac.rs  mod.rs  tag.rs
crates/dr/src/crypto/: key_pair.rs  mod.rs  provider.rs
crates/dr/src/default_crypto/: error.rs  header_key.rs  key_pair.rs  mod.rs  provider.rs  public_key.rs
crates/dr/src/hdr/: encrypted.rs  error.rs  mod.rs
crates/dr/src/key/: hdr.rs  header.rs  mod.rs  msg.rs  msg_chain.rs  private.rs  public.rs  root.rs
crates/dr/src/state/: chain.rs  error.rs  header.rs  mod.rs  msg_chain.rs  num.rs  recv.rs  root.rs  send.rs  skipped_msg_keys.rs
crates/dr/src/state/chain/: error.rs  header.rs  mod.rs  num.rs  recv.rs  root.rs  send.rs  skipped_msg_keys.rs
crates/dr/tests/: usage.rs  utils.rs
crates/shield/: Cargo.toml  README.md
crates/shield/src/: lib.rs
crates/shield/src/chain/: mod.rs  msg.rs  receiving.rs  root.rs  send.rs  sending.rs  skipped_message_keys.rs
crates/shield/src/chain/key/: master.rs  mod.rs  root.rs
crates/shield/src/header/: encrypted.rs  error.rs  mod.rs
crates/shield/src/key/: header.rs  master.rs  message.rs  mod.rs  msg.rs  private.rs  public.rs  root.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  macros.rs
readme-gen/: fmt-todo  run
readme-generator/: format-todo  run
