[package]
name = "sapphire"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"crates/*",
]

[workspace.lints.clippy]
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[workspace.lints.rust]
missing_docs = "forbid"
unsafe_code = "forbid"

[[bin]]
path = "_bin_mock/main.rs"
name = "_bin_mock"

# TODO: [[bench]]es
