# TODO: [Thought] Send data once every certain period. If there is no data,
# send an empty encrypted packet. It will help:
# 1. Inactivity traffic is indistinguishable from non-action traffic.
# 2. In the client app, you can see who is online now. At the same time, the
#    user can prohibit showing that he is online.

[package]
name = "sapphire"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"crates/*",
]

[workspace.lints.clippy]
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"

[[bin]]
path = "_bin_mock/main.rs"
name = "_bin_mock"
