# TODO: [Thought] Send data once every certain period. If there is no data,
# send an empty encrypted packet. It will help:
# 1. Inactivity traffic is indistinguishable from non-action traffic.
# 2. In the client app, you can see who is online now. At the same time, the
#    user can prohibit showing that he is online.
#
# TODO: tracing or logs in all crates.
# TODO: installation in the Makefile. Do not forget to make production builds.

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"

[workspace]
members = [
	"crates/*",
]
resolver = "2"

[workspace.lints.clippy]
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"
