[dependencies.chacha20]
features = ["zeroize"]
version = "0.9.1"

[dependencies.hkdf]
version = "0.12.4"

[dependencies.hmac]
version = "0.12.1"

[dependencies.sha2]
version = "0.10.8"

[dependencies.zeroize]
features = ["derive"]
default-features = false
version = "1.7.0"

[lints]
workspace = true

[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

[[test]]
name = "encrypt_decrypt"