[dependencies.chacha20]
features = ["zeroize"]
version = "0.9.1"

[dependencies.hkdf]
version = "0.12.4"

[dependencies.hmac]
version = "0.12.1"

[dependencies.sha2]
version = "0.10.8"

[dependencies.utils]
path = "../utils"

[dependencies.zerocopy]
features = ["derive"]
version = "0.7.34"

[dependencies.zeroize]
default-features = false
features = ["derive"]
version = "1.7.0"

[dev-dependencies.criterion]
version = "0.5.1"

[lints]
workspace = true

[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

[[bench]]
harness = false
name = "encrypt_decrypt"

[[test]]
name = "encrypt_decrypt"