[dependencies.dirs]
version = "5.0.1"

[dependencies.iced]
features = ["advanced", "tokio"]
version = "0.12.1"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.203"

[dependencies.serde_json]
version = "1.0.117"

[dependencies.tokio]
features = ["fs"]
version = "1.38.0"

[dev-dependencies.tokio]
features = ["macros", "rt"]
version = "1.38.0"

[lints]
workspace = true

[package]
name = "desktop-iced"
version = "0.1.0"
edition = "2021"
