[dependencies.bincode]
features = ["alloc"]
version = "2.0.0-rc.3"

[dependencies.chacha20poly1305]
optional = true
version = "0.10.1"

[dependencies.hashbrown]
version = "0.14.3"

[dependencies.hkdf]
optional = true
version = "0.12.4"

[dependencies.sha2]
optional = true
version = "0.10.8"

[dependencies.x25519-dalek]
features = ["getrandom", "static_secrets"]
optional = true
version = "2.0.1"

[dependencies.zeroize]
optional = true
version = "1.7.0"

[dev-dependencies.chacha20poly1305]
version = "0.10.1"

[dev-dependencies.hkdf]
version = "0.12.4"

[dev-dependencies.sha2]
version = "0.10.8"

[dev-dependencies.x25519-dalek]
features = ["getrandom", "static_secrets"]
version = "2.0.0"

[dev-dependencies.zeroize]
version = "1.7.0"

[features]
default-crypto = [
	"dep:chacha20poly1305",
	"dep:hkdf",
	"dep:sha2",
	"dep:x25519-dalek",
	"dep:zeroize",
]

[lints]
workspace = true

[package]
name = "dr"
version = "0.1.0"
edition = "2021"
