[dependencies.chacha20poly1305]
version = "0.10.1"

[dependencies.hashbrown]
version = "0.14.3"

[dependencies.hkdf]
version = "0.12.4"

[dependencies.sha2]
version = "0.10.8"

[dependencies.x25519-dalek]
features = ["getrandom", "static_secrets"]
version = "2.0.1"

[dependencies.zerocopy]
features = ["derive"]
version = "0.7.32"

[dependencies.zeroize]
version = "1.7.0"

[lints]
workspace = true

[package]
name = "dr"
version = "0.1.0"
edition = "2021"
