[dependencies.cipher]
path = "../cipher"

[dependencies.hmac]
version = "0.12.1"

[dependencies.sha2]
version = "0.10.8"

[dependencies.zerocopy]
features = ["derive"]
version = "0.7.34"

[dependencies.zeroize]
default-features = false
features = ["derive"]
version = "1.7.0"

[lints]
workspace = true

[package]
name = "shield"
version = "0.1.0"
edition = "2021"
